--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,5 +30,14 @@
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true" />
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test"
+        android:id="@+id/checkBox"
+        android:checked="true"
+        android:layout_below="@+id/button2"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
